Introduce SSTableInputStream, a custom java.io.InputStream that buffers data from a generic SSTableSource and handles flow control to read from many SSTables without OutOfMemory errors